@@ -1,6 +1,5 @@
 package me.kandid.user.Controller;
 
-import co.elastic.clients.elasticsearch._types.aggregations.MultiBucketBase;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -8,15 +7,15 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-import me.kandid.user.Model.Product.ElastiProduct;
 import me.kandid.user.Model.Product.Product;
 import me.kandid.user.Model.Product.ProductFilter;
+import me.kandid.user.Model.Product.SearchableProduct;
 import me.kandid.user.Service.ProductService;
+import org.opensearch.client.opensearch._types.aggregations.StringTermsBucket;
+import org.opensearch.client.opensearch.core.SearchResponse;
+import org.opensearch.client.opensearch.core.search.Hit;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.elasticsearch.client.elc.ElasticsearchAggregations;
-import org.springframework.data.elasticsearch.core.SearchHit;
-import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -87,26 +86,18 @@ public class ProductController {
                                          int pgsize,
                                          @RequestBody(required = false) ProductFilter filter) {
         Map<String, Object> map = new HashMap<>();
-        SearchHits<ElastiProduct> prod = productService.getProducts(q, filter, PageRequest.of(pg, pgsize));
-        ElasticsearchAggregations aggregatedData = ((ElasticsearchAggregations) prod.getAggregations());
-        Map<String, Object> poop = new HashMap<>();
-        assert aggregatedData != null;
-        aggregatedData.aggregationsAsMap().forEach((s, a) -> {
-            Map<String, Long> o =
-                    a.aggregation().getAggregate().sterms().buckets().array().stream()
-                     .collect(Collectors.toMap(bucket -> bucket.key()
-                                                               .stringValue(), MultiBucketBase::docCount));
-            poop.put(s, o);
-        });
-        map.put("product", prod.stream().map(SearchHit::getContent).collect(Collectors.toList()));
-        map.put("filters", poop);
-        return new ResponseEntity<>(map, HttpStatus.OK);
+        SearchResponse<SearchableProduct> prod = productService.getProducts(q, filter, PageRequest.of(pg, pgsize));
+        map.put("product", prod.hits().hits().stream().map(Hit::source).toList());
+        map.put("filters", prod.aggregations().entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey,
+                o -> o.getValue().sterms().buckets().array().stream().collect(Collectors.toMap(StringTermsBucket::key,
+                        StringTermsBucket::docCount)))));
+        return new ResponseEntity<>(map,
+                HttpStatus.OK);
     }
 
     @GetMapping("autocomplete")
     public ResponseEntity<?> autoComplete(@RequestParam("q") String q) {
-        return new ResponseEntity<>(
-                productService.autocomplete(q).stream().map(SearchHit::getContent).collect(Collectors.toList()),
+        return new ResponseEntity<>(productService.autocomplete(q).hits().hits().stream().map(Hit::source),
                 HttpStatus.OK);
     }
 }
